# coach_api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env.prod.example  manage.py  pyproject.toml
apps/api/v1/: apps.py  urls.py  views.py
apps/api/v1/backup_codes/: serializers.py  urls.py  views.py
apps/api/v1/common/: serializers.py
apps/api/v1/exercises/: serializers.py  urls.py  views.py
apps/api/v1/goals/: serializers.py  urls.py  views.py
apps/api/v1/plans/: schemas.py  serializers.py  urls.py  (+1 more)
apps/common/: admin.py  choices.py  models.py  pagination.py
apps/exercises/: admin.py  choices.py  models.py
apps/exercises/migrations/: 0001_initial.py  0002_exercise_media_file_alter_exercise_difficulty_and_more.py  0003_alter_exercise_options.py
apps/plans/: admin.py  choices.py  exceptions.py  models.py  tasks.py
apps/plans/migrations/: 0001_initial.py  0002_alter_plan_status.py
apps/plans/services/: ai_plans.py  plans.py
apps/profiles/: admin.py  choices.py  exceptions.py  models.py
apps/profiles/migrations/: 0001_initial.py  0002_alter_clientprofile_training_location.py
apps/profiles/services/: backup_code_service.py
apps/programs/: admin.py  models.py
apps/programs/migrations/: 0001_initial.py  0002_alter_program_level_alter_program_location_type.py
apps/workouts/: admin.py  models.py
apps/workouts/migrations/: 0001_initial.py  0002_alter_workout_category_alter_workout_level.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
scripts/: create_api_module.sh
(+17 files in other folders)
